1st pass align homepage containers with other flexbox usage

--- a/source/docs.html
+++ b/source/docs.html
@@ -11,103 +11,140 @@ use:
   <div class="row">
     <h1 class="title">Documentation Topics</h1>
   </div>
-  <div class="row mb-20">
+  <div class="row">
     <div class="col-md-12">
-      <a class="topic-info-link" href="/docs/guides/getting-started/">
-      <div class="guide-cta-landing" style="padding:25px!important;">
-        <h1 class="hero-video__guide-cta-title">Getting Started Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
-        <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</p>
+      <div class="flex-panel-group">
+        <div class="pantheon-workflows flex-panel-item-platform-integrations">
+          <a class="topic-info-link" href="/docs/get-started/">
+            <div class="flex-panel-body-home">
+              <div class="" style="text-align:center;">
+                <img alt="Get Started" src="/source/docs/assets/images/icon-start.svg" class="main-topic-info__plugin-image" >
+                <h3 class="hero-video__guide-cta-title">Get Started</h3>
+                <p class="main-topic-info__description" style="text-align:left;">Migrate existing sites or spin up a new site, then learn how to manage your projects on Pantheon.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="pantheon-workflows flex-panel-item-platform-integrations">
+          <a class="topic-info-link" href="/docs/develop/">
+            <div class="flex-panel-body-home">
+              <div class="" style="text-align:center;">
+                <img alt="Develop" src="/source/docs/assets/images/icon-develop.svg" class="main-topic-info__plugin-image" >
+                <h3 class="hero-video__guide-cta-title">Develop</h3>
+                <p class="main-topic-info__description" style="text-align:left;">Set up your local or  work via SFTP and Git within our Dev, Test, and Live environments to follow development best practices.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="pantheon-workflows flex-panel-item-platform-integrations">
+          <a class="topic-info-link" href="/docs/go-live/">
+            <div class="flex-panel-body-home">
+              <div class="" style="text-align:center;">
+                <img alt="Go Live" src="/source/docs/assets/images/icon-golive.svg" class="main-topic-info__plugin-image" >
+                <h3 class="hero-video__guide-cta-title">Go Live</h3>
+                <p class="main-topic-info__description" style="text-align:left;">Learn how to launch sites on Pantheon. Select the correct plan, then add your domain and enable HTTPS.</p>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
-      </a>
     </div>
   </div>
-  <div class="mb-70">
-    <div class="row row-topics-list row-topics-list-main">
-      <div class="main-topic-info">
-        <a class="topic-info-link" href="/docs/get-started">
-          <div class="topic-info__text">
-            <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-start.svg)"></div>
-            <h2 class="main-topic-info__title">Get Started</h2>
-            <p class="main-topic-info__description">Migrate existing sites or spin up a new site, then learn how to manage your projects on Pantheon.</p>
-          </div>
-        </a>
-      </div>
-      <div class="main-topic-info">
-        <a class="topic-info-link" href="/docs/develop">
-          <div class="topic-info__text">
-            <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-develop.svg)"></div>
-            <h2 class="main-topic-info__title">Develop</h2>
-            <p class="main-topic-info__description">Set up your local or  work via SFTP and Git within our Dev, Test, and Live environments to follow development best practices.</p>
-          </div>
-        </a>
-      </div>
-      <div class="main-topic-info">
-        <a class="topic-info-link" href="/docs/go-live">
-          <div class="topic-info__text">
-            <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-golive.svg)"></div>
-            <h2 class="main-topic-info__title">Go Live</h2>
-            <p class="main-topic-info__description">Learn how to launch sites on Pantheon. Select the correct plan, then add your domain and enable HTTPS.</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="row row-topics-list row-topics-list-secondary">
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/platform">
-          <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-platform.svg)"></div>
-          <div class="topic-info__text">
-            <h3 class="topic-info__title">Explore Platform Architecture</h3>
-            <p class="topic-info__description">Understand and leverage our container-based infrastructure for smooth scaling.</p>
-          </div>
-        </a>
-      </div>
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/automate">
-          <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-automate.svg)"></div>
-          <div class="topic-info__text">
-            <h3 class="topic-info__title">Automate & Integrate</h3>
-            <p class="topic-info__description">Script common procedures using Quicksilver and the Pantheon YAML file. Integrate third-party services with Drupal and WordPress.</p>
-          </div>
-        </a>
-      </div>
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/performance">
-          <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-performance.svg)"></div>
-          <div class="topic-info__text">
-            <h3 class="topic-info__title">Optimize Performance</h3>
-            <p class="topic-info__description">Configure cache, upgrade PHP, and use New Relic APM for optimal performance.</p>
-          </div>
-        </a>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="flex-panel-group">
+        <div class="pantheon-workflows flex-panel-item-platform-integrations">
+          <a class="topic-info-link" href="/docs/platform/">
+            <div class="flex-panel-body-home">
+              <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-platform.svg)"></div>
+              <div class="">
+                <h3 class="topic-info__title">Explore Platform Architecture</h3>
+                <p class="topic-info__description">Understand and leverage our container-based infrastructure for smooth scaling.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="pantheon-workflows flex-panel-item-platform-integrations">
+          <a class="topic-info-link" href="/docs/automate/">
+            <div class="flex-panel-body-home">
+              <div class="topic-info__image" style="width: 150px;height: 100px;background-image:url(/source/docs/assets/images/icon-automate.svg)"></div>
+              <div class="">
+                <h3 class="topic-info__title">Automate & Integrate</h3>
+                <p class="topic-info__description">Script common procedures using Quicksilver and the Pantheon YAML file. Integrate third-party services with Drupal and WordPress.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="pantheon-workflows flex-panel-item-platform-integrations">
+          <a class="topic-info-link" href="/docs/performance/">
+            <div class="flex-panel-body-home">
+              <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-performance.svg)"></div>
+              <div class="">
+                <h3 class="topic-info__title">Optimize Performance</h3>
+                <p class="topic-info__description">Configure cache, upgrade PHP, and use New Relic APM for optimal performance.</p>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
-    <div class="row row-topics-list row-topics-list-secondary">
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/manage">
-          <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-manage.svg)"></div>
-          <div class="topic-info__text">
-            <h3 class="topic-info__title">Manage Teams & Organizations</h3>
-            <p class="topic-info__description">Add team members, restrict access, and manage projects in bulk using cloud-based development tools.</p>
-          </div>
-        </a>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="flex-panel-group">
+        <div class="pantheon-workflows flex-panel-item-platform-integrations">
+          <a class="topic-info-link" href="/docs/manage/">
+            <div class="flex-panel-body-home">
+              <div class="topic-info__image" style="width: 150px;height: 100px;background-image:url(/source/docs/assets/images/icon-manage.svg)"></div>
+              <div class="">
+                <h3 class="topic-info__title">Manage Teams & Organizations</h3>
+                <p class="topic-info__description">Add team members, restrict access, and manage projects in bulk using cloud-based development tools.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="pantheon-workflows flex-panel-item-platform-integrations">
+          <a class="topic-info-link" href="/docs/troubleshoot/">
+            <div class="flex-panel-body-home">
+              <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-troubleshoot.svg)"></div>
+              <div class="">
+                <h3 class="topic-info__title">Troubleshoot</h3>
+                <p class="topic-info__description">Understand known issues with plugins or modules and expose problems in log files.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="pantheon-workflows flex-panel-item-platform-integrations">
+          <a class="topic-info-link" href="/docs/support/">
+            <div class="flex-panel-body-home">
+              <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-support.svg)"></div>
+              <div class="">
+                <h3 class="topic-info__title">Support</h3>
+                <p class="topic-info__description">Need more help? We’re here for you. Learn how to get support directly from our team.</p>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/troubleshoot">
-          <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-troubleshoot.svg)"></div>
-          <div class="topic-info__text">
-            <h3 class="topic-info__title">Troubleshoot</h3>
-            <p class="topic-info__description">Understand known issues with plugins or modules and expose problems in log files.</p>
+    </div>
+  </div>
+  <div class="row mb-70">
+    <div class="col-md-12 mb-20">
+      <a class="topic-info-link" href="/docs/guides/">
+        <div class="row">
+          <div class="guide-cta-landing">
+            <div class="col-md-4 hidden-s guide-cta-feature-image" style="flex: 1 1 0%;">
+              <img style="padding: 30px 0px 0px 50px;" src="/source/docs/assets/images/guide.svg"/>
+            </div>
+            <div class="col-md-8 guide-cta__text">
+              <div class="guide-cta__text_inner">
+                <h1 class="hero-video__guide-cta-title">Browse Guides <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
+                <p class="hero-video__guide-cta-subtitle">Ready to level up your dev skills? Try one of our guides.</p>
+              </div>
+            </div>
           </div>
-        </a>
-      </div>
-      <div class="topic-info">
-        <a class="topic-info-link" href="/docs/getting-support">
-          <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-support.svg)"></div>
-          <div class="topic-info__text">
-            <h3 class="topic-info__title">Support</h3>
-            <p class="topic-info__description">Need more help? We’re here for you. Learn how to get support directly from our team.</p>
-          </div>
-        </a>
-      </div>
+        </div>
+      </a>
     </div>
   </div>
   <div class="row">
