--- a/source/_views/topic.html
+++ b/source/_views/topic.html
@@ -2,7 +2,7 @@
 {% block content_wrapper %}
 <div class="container">
   <div class="row">
-    <h1 style="margin-left:15px;margin-bottom:20px;margin-top:0px;">{{ page.title }}</h1>
+    <h1 style="margin-top:15px;" class="title">{{ page.title }}</h1>
     {% if page.getstarted %}
       {% include("topics/get-started.html") %}
     {% elseif page.develop %}
