Swap support for guides cta on home page

--- a/source/docs.html
+++ b/source/docs.html
@@ -115,36 +115,17 @@ use:
           </a>
         </div>
         <div class="pantheon-workflows flex-panel-item-platform-integrations">
-          <a class="topic-info-link" href="/docs/support/">
+          <a class="topic-info-link" href="/docs/guides/">
             <div class="flex-panel-body-home">
-              <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-support.svg)"></div>
+              <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/i-monitoring.svg)"></div>
               <div class="">
-                <h3 class="topic-info__title">Support</h3>
-                <p class="topic-info__description">Need more help? We’re here for you. Learn how to get support directly from our team.</p>
+                <h3 class="topic-info__title">Guides</h3>
+                <p class="topic-info__description">Need some help leveling up your dev skills? Try one of our guides.</p>
               </div>
             </div>
           </a>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="row mb-70">
-    <div class="col-md-12 mb-20">
-      <a class="topic-info-link" href="/docs/guides/">
-        <div class="row">
-          <div class="guide-cta-landing">
-            <div class="col-md-4 hidden-s guide-cta-feature-image" style="flex: 1 1 0%;">
-              <img style="padding: 30px 0px 0px 50px;" src="/source/docs/assets/images/guide.svg"/>
-            </div>
-            <div class="col-md-8 guide-cta__text">
-              <div class="guide-cta__text_inner">
-                <h1 class="hero-video__guide-cta-title">Browse Guides <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
-                <p class="hero-video__guide-cta-subtitle">Ready to level up your dev skills? Try one of our guides.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
     </div>
   </div>
   <div class="row">
