--- a/source/_partials/topics/develop.html
+++ b/source/_partials/topics/develop.html
@@ -1,20 +1,18 @@
 <div class="row">
-  <div class="col-md-12 mb-20">
-    <a class="topic-info-link" href="/docs/terminus/">
-      <div class="row mb-20">
-        <div class="guide-cta-landing">
-          <div class="col-md-4 hidden-s guide-cta-feature-image">
-            <img src="/source/docs/assets/images/terminus-thumbLarge.png"/>
-          </div>
-          <div class="col-md-8 guide-cta__text">
-            <div class="guide-cta__text_inner">
-              <h1 class="hero-video__guide-cta-title">Terminus Manual <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
-              <p class="hero-video__guide-cta-subtitle">Prefer the command line? Check out Terminus, the Pantheon CLI.</p>
-            </div>
-          </div>
+  <div class="col-md-12">
+    <div class="hero-video clearfix" style="background-image:none!important;border:none!important;">
+      <div class="col-md-6 hero-video__video">
+        <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
+      </div>
+      <a class="topic-info-link" style="display:block!important;" href="/docs/guides/getting-started/">
+      <div class="col-md-6">
+        <div class="guide-cta-landing" style="padding:25px!important;display:block">
+          <h1 class="hero-video__guide-cta-title">Getting Started Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
+          <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</p>
         </div>
       </div>
     </a>
+    </div>
   </div>
 </div>
 <div class="row">
