--- a/source/docs.html
+++ b/source/docs.html
@@ -17,7 +17,7 @@ use:
         <div class="pantheon-workflows flex-panel-item-platform-integrations">
           <a class="topic-info-link" href="/docs/get-started/">
             <div class="flex-panel-body-home">
-              <div class="" style="text-align:center;">
+              <div class="flex-panel-main-body-inner">
                 <img alt="Get Started" src="/source/docs/assets/images/icon-start.svg" class="main-topic-info__plugin-image" >
                 <h3 class="hero-video__guide-cta-title">Get Started</h3>
                 <p class="main-topic-info__description" style="text-align:left;">Migrate existing sites or spin up a new site, then learn how to manage your projects on Pantheon.</p>
@@ -28,7 +28,7 @@ use:
         <div class="pantheon-workflows flex-panel-item-platform-integrations">
           <a class="topic-info-link" href="/docs/develop/">
             <div class="flex-panel-body-home">
-              <div class="" style="text-align:center;">
+              <div class="flex-panel-main-body-inner">
                 <img alt="Develop" src="/source/docs/assets/images/icon-develop.svg" class="main-topic-info__plugin-image" >
                 <h3 class="hero-video__guide-cta-title">Develop</h3>
                 <p class="main-topic-info__description" style="text-align:left;">Set up your local or  work via SFTP and Git within our Dev, Test, and Live environments to follow development best practices.</p>
@@ -39,7 +39,7 @@ use:
         <div class="pantheon-workflows flex-panel-item-platform-integrations">
           <a class="topic-info-link" href="/docs/go-live/">
             <div class="flex-panel-body-home">
-              <div class="" style="text-align:center;">
+              <div class="flex-panel-main-body-inner">
                 <img alt="Go Live" src="/source/docs/assets/images/icon-golive.svg" class="main-topic-info__plugin-image" >
                 <h3 class="hero-video__guide-cta-title">Go Live</h3>
                 <p class="main-topic-info__description" style="text-align:left;">Learn how to launch sites on Pantheon. Select the correct plan, then add your domain and enable HTTPS.</p>
@@ -56,10 +56,12 @@ use:
         <div class="pantheon-workflows flex-panel-item-platform-integrations">
           <a class="topic-info-link" href="/docs/platform/">
             <div class="flex-panel-body-home">
-              <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-platform.svg)"></div>
-              <div class="">
-                <h3 class="topic-info__title">Explore Platform Architecture</h3>
-                <p class="topic-info__description">Understand and leverage our container-based infrastructure for smooth scaling.</p>
+              <div class="flex-panel-body-inner">
+                <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-platform.svg)"></div>
+                <div class="topic-info__description-well">
+                  <h3 class="topic-info__title">Explore Platform Architecture</h3>
+                  <p class="topic-info__description">Understand and leverage our container-based infrastructure for smooth scaling.</p>
+                </div>
               </div>
             </div>
           </a>
@@ -67,10 +69,12 @@ use:
         <div class="pantheon-workflows flex-panel-item-platform-integrations">
           <a class="topic-info-link" href="/docs/automate/">
             <div class="flex-panel-body-home">
-              <div class="topic-info__image" style="width: 150px;height: 100px;background-image:url(/source/docs/assets/images/icon-automate.svg)"></div>
-              <div class="">
-                <h3 class="topic-info__title">Automate & Integrate</h3>
-                <p class="topic-info__description">Script common procedures using Quicksilver and the Pantheon YAML file. Integrate third-party services with Drupal and WordPress.</p>
+              <div class="flex-panel-body-inner">
+                <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-automate.svg)"></div>
+                <div class="topic-info__description-well">
+                  <h3 class="topic-info__title">Automate & Integrate</h3>
+                  <p class="topic-info__description">Script common procedures using Quicksilver and the Pantheon YAML file. Integrate third-party services with Drupal and WordPress.</p>
+                </div>
               </div>
             </div>
           </a>
@@ -78,10 +82,12 @@ use:
         <div class="pantheon-workflows flex-panel-item-platform-integrations">
           <a class="topic-info-link" href="/docs/performance/">
             <div class="flex-panel-body-home">
-              <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-performance.svg)"></div>
-              <div class="">
-                <h3 class="topic-info__title">Optimize Performance</h3>
-                <p class="topic-info__description">Configure cache, upgrade PHP, and use New Relic APM for optimal performance.</p>
+              <div class="flex-panel-body-inner">
+                <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-performance.svg)"></div>
+                <div class="topic-info__description-well">
+                  <h3 class="topic-info__title">Optimize Performance</h3>
+                  <p class="topic-info__description">Configure cache, upgrade PHP, and use New Relic APM for optimal performance.</p>
+                </div>
               </div>
             </div>
           </a>
@@ -89,16 +95,18 @@ use:
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row mb-70">
     <div class="col-md-12">
       <div class="flex-panel-group">
         <div class="pantheon-workflows flex-panel-item-platform-integrations">
           <a class="topic-info-link" href="/docs/manage/">
             <div class="flex-panel-body-home">
-              <div class="topic-info__image" style="width: 150px;height: 100px;background-image:url(/source/docs/assets/images/icon-manage.svg)"></div>
-              <div class="">
-                <h3 class="topic-info__title">Manage Teams & Organizations</h3>
-                <p class="topic-info__description">Add team members, restrict access, and manage projects in bulk using cloud-based development tools.</p>
+              <div class="flex-panel-body-inner">
+                <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-manage.svg)"></div>
+                <div class="topic-info__description-well">
+                  <h3 class="topic-info__title" style="margin-top:10px;">Manage Teams & Organizations</h3>
+                  <p class="topic-info__description">Add team members, restrict access, and manage projects in bulk using cloud-based development tools.</p>
+                </div>
               </div>
             </div>
           </a>
@@ -106,10 +114,12 @@ use:
         <div class="pantheon-workflows flex-panel-item-platform-integrations">
           <a class="topic-info-link" href="/docs/troubleshoot/">
             <div class="flex-panel-body-home">
-              <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-troubleshoot.svg)"></div>
-              <div class="">
-                <h3 class="topic-info__title">Troubleshoot</h3>
-                <p class="topic-info__description">Understand known issues with plugins or modules and expose problems in log files.</p>
+              <div class="flex-panel-body-inner">
+                <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-troubleshoot.svg)"></div>
+                <div class="topic-info__description-well">
+                  <h3 class="topic-info__title">Troubleshoot</h3>
+                  <p class="topic-info__description">Understand known issues with plugins or modules and expose problems in log files.</p>
+                </div>
               </div>
             </div>
           </a>
@@ -117,10 +127,12 @@ use:
         <div class="pantheon-workflows flex-panel-item-platform-integrations">
           <a class="topic-info-link" href="/docs/guides/">
             <div class="flex-panel-body-home">
-              <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/i-monitoring.svg)"></div>
-              <div class="">
-                <h3 class="topic-info__title">Guides</h3>
-                <p class="topic-info__description">Need some help leveling up your dev skills? Try one of our guides.</p>
+              <div class="flex-panel-body-inner">
+                <div class="topic-info__image" style="margin:0px;background-image:url(/source/docs/assets/images/i-monitoring.svg)"></div>
+                <div class="topic-info__description-well">
+                  <h3 class="topic-info__title">Guides</h3>
+                  <p class="topic-info__description">Need some help leveling up your dev skills? Try one of our guides.</p>
+                </div>
               </div>
             </div>
           </a>
