Hotfix cta h3 margin, restore homepage cta to gsg

--- a/source/docs.html
+++ b/source/docs.html
@@ -11,6 +11,16 @@ use:
   <div class="row">
     <h1 class="title">Documentation Topics</h1>
   </div>
+  <div class="row" style="margin-bottom:15px;">
+    <div class="col-md-12">
+        <a class="topic-info-link" style="display:block!important;" href="/docs/guides/getting-started/">
+          <div class="guide-cta-landing" style="padding:25px!important;display:block">
+            <h1 class="hero-video__guide-cta-title">Getting Started Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
+            <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</p>
+          </div>
+        </a>
+      </div>
+    </div>
   <div class="row">
     <div class="col-md-12">
       <div class="flex-panel-group">
@@ -19,7 +29,7 @@ use:
             <div class="flex-panel-body-home">
               <div class="flex-panel-main-body-inner">
                 <img alt="Get Started" src="/source/docs/assets/images/icon-start.svg" class="main-topic-info__plugin-image" >
-                <h3 class="hero-video__guide-cta-title">Get Started</h3>
+                <h3 class="hero-video__guide-main-topic-title">Get Started</h3>
                 <p class="main-topic-info__description" style="text-align:left;">Migrate existing sites or spin up a new site, then learn how to manage your projects on Pantheon.</p>
               </div>
             </div>
@@ -30,7 +40,7 @@ use:
             <div class="flex-panel-body-home">
               <div class="flex-panel-main-body-inner">
                 <img alt="Develop" src="/source/docs/assets/images/icon-develop.svg" class="main-topic-info__plugin-image" >
-                <h3 class="hero-video__guide-cta-title">Develop</h3>
+                <h3 class="hero-video__guide-main-topic-title">Develop</h3>
                 <p class="main-topic-info__description" style="text-align:left;">Set up your local or  work via SFTP and Git within our Dev, Test, and Live environments to follow development best practices.</p>
               </div>
             </div>
@@ -41,7 +51,7 @@ use:
             <div class="flex-panel-body-home">
               <div class="flex-panel-main-body-inner">
                 <img alt="Go Live" src="/source/docs/assets/images/icon-golive.svg" class="main-topic-info__plugin-image" >
-                <h3 class="hero-video__guide-cta-title">Go Live</h3>
+                <h3 class="hero-video__guide-main-topic-title">Go Live</h3>
                 <p class="main-topic-info__description" style="text-align:left;">Learn how to launch sites on Pantheon. Select the correct plan, then add your domain and enable HTTPS.</p>
               </div>
             </div>
