--- a/source/_views/guide.html
+++ b/source/_views/guide.html
@@ -60,6 +60,9 @@
               <hr style="margin-top:10px;margin-bottom:10px;">
               </header>
               {{ page.blocks.content|raw }}
+              {% if page.survey %}
+               <iframe style="width:100%;min-height:300px;" frameborder="0" src="https://www.getfeedback.com/r/tfYOGoE7?page={{page.url}}&topic={{page.categories|last}}"></iframe>
+              {% endif %}
             </div>
             {% if page.guidetoc %}
               {% include ("sidebarnav.html") %}
