--- a/source/_views/guide.html
+++ b/source/_views/guide.html
@@ -61,7 +61,7 @@
               </header>
               {{ page.blocks.content|raw }}
               {% if page.survey %}
-               <iframe style="width:100%;min-height:300px;" frameborder="0" src="https://www.getfeedback.com/r/tfYOGoE7?page={{page.url}}&topic={{page.categories|last}}"></iframe>
+               <iframe style="width:100%;min-height:300px;" frameborder="0" src="https://www.getfeedback.com/r/tfYOGoE7?guide={{page.title}}"></iframe>
               {% endif %}
             </div>
             {% if page.guidetoc %}
