--- a/source/_views/doc.html
+++ b/source/_views/doc.html
@@ -2,13 +2,15 @@
 {% block content_wrapper %}
 <div class="container">
   {% if page.earlyaccess %}
-    <div class="row">
-      <div id="earlyaccessoutter" class="alert devbar alert-dismissible" role="alert">
-         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-         <h3 class="devbar">Early Access Doc</h3>
-         <p class="devbar">{{ page.earlynote }}<p>
-      </div>
+  <div class="row" style="margin-bottom:15px;">
+    <div class="col-md-12">
+      <div id="earlyaccessoutter" class="alert devbar alert-dismissible" role="alert" style="border: 1px solid #B5C0C3;border-radius: 4px;">
+       <button type="button" class="close" data-dismiss="alert" aria-label="Close" data-original-title="" title=""><span aria-hidden="true">×</span></button>
+       <h3 class="devbar">Early Access Doc</h3>
+       <p class="devbar">{{page.earlynote}}</p>
+     </div>
     </div>
+  </div>
   {% endif %}
   <div class="row doc-content-well">
     <div id="doc" class="article col-md-9 md-70">
