Stop and hotfix marketo

--- a/source/docs.html
+++ b/source/docs.html
@@ -161,7 +161,7 @@ use:
         <li><a href="/docs/terminus/">Terminus Manual</a></li>
         <li><a href="/docs/guides/getting-started/">Getting Started Guide</a></li>
         <li><a href="/docs/platform-considerations/">Platform Considerations</a></li>
-        <li><a href="/docs/domains/">Domains and DNS</a></li>
+        <li><a href="/docs/guides/launch/">Luanch Essentials</a></li>
         <li><a href="/docs/pantheon-workflow/">Using the Pantheon Workflow</a></li>
         <li><a href="/docs/kill-mysql-queries/">Identify and Kill MySQL Queries</a></li>
         <li><a href="/docs/redirects/">Redirect Incoming Requests</a></li>
