--- a/source/docs.html
+++ b/source/docs.html
@@ -161,12 +161,12 @@ use:
         <li><a href="/docs/terminus/">Terminus Manual</a></li>
         <li><a href="/docs/guides/getting-started/">Getting Started Guide</a></li>
         <li><a href="/docs/platform-considerations/">Platform Considerations</a></li>
-        <li><a href="/docs/guides/launch/">Luanch Essentials</a></li>
+        <li><a href="/docs/guides/launch/">Launch Essentials</a></li>
         <li><a href="/docs/pantheon-workflow/">Using the Pantheon Workflow</a></li>
         <li><a href="/docs/kill-mysql-queries/">Identify and Kill MySQL Queries</a></li>
         <li><a href="/docs/redirects/">Redirect Incoming Requests</a></li>
         <li><a href="/docs/settings-php/">Configuring settings.php</a></li>
-        <li><a href="/docs/git-faq/">Git FAQs</a></li>
+        <li><a href="/docs/git-faq/">Git FAQs</a><>
         <li><a href="/docs/ssh-keys/">Generating and Adding SSH Keys</a></li>
         <li><a href="/docs/redis/">Redis as a Caching Backend</a></li>
         <li><a href="/docs/drush/">Drupal Drush Command-Line Utility</a></li>
