Restore closing li tag on 169

--- a/source/docs.html
+++ b/source/docs.html
@@ -166,7 +166,7 @@ use:
         <li><a href="/docs/kill-mysql-queries/">Identify and Kill MySQL Queries</a></li>
         <li><a href="/docs/redirects/">Redirect Incoming Requests</a></li>
         <li><a href="/docs/settings-php/">Configuring settings.php</a></li>
-        <li><a href="/docs/git-faq/">Git FAQs</a><>
+        <li><a href="/docs/git-faq/">Git FAQs</a></li>
         <li><a href="/docs/ssh-keys/">Generating and Adding SSH Keys</a></li>
         <li><a href="/docs/redis/">Redis as a Caching Backend</a></li>
         <li><a href="/docs/drush/">Drupal Drush Command-Line Utility</a></li>
