Revert "Disable marketo script in for subscribe CTA in footer"
This reverts commit 3876a0cf0869ffbfc3ccc94eb2736944555e0e4f.

--- a/source/_partials/footer_content.html
+++ b/source/_partials/footer_content.html
@@ -135,14 +135,14 @@
                           <h4>INSIGHT. DELIVERED MONTHLY.</h4>
                           <p>Awesome development news, tutorials, and tips. Plus get 3 free downloads, just for signing up. If you don't love it, unsubscribe with just a click.</p>
                         </div>
-                        <!--div class="col-lg-12 col-sm-6 market-subscribe-footer">
+                        <div class="col-lg-12 col-sm-6 market-subscribe-footer">
                           <script src="https://app-ab05.marketo.com/js/forms2/js/forms2.min.js">
                           </script>
                           <form id="mktoForm_2014" name="mktoForm_2014"></form>
                           <script>
                           MktoForms2.loadForm("https://app-ab05.marketo.com","316-GSV-089",2014,function(o){o.onSuccess(function(t,m){return $form=o.getFormElem(),$form.css("height",$form.css("height")).html("<p>Thank You for Signing Up<\/p>"),!1})});
                           </script>
-                        </div-->
+                        </div>
                       </div>
                     </div>
                   </div><!-- /.content -->
