--- a/source/docs.html
+++ b/source/docs.html
@@ -164,7 +164,7 @@ use:
         <li><a href="/docs/guides/launch/">Launch Essentials</a></li>
         <li><a href="/docs/pantheon-workflow/">Using the Pantheon Workflow</a></li>
         <li><a href="/docs/kill-mysql-queries/">Identify and Kill MySQL Queries</a></li>
-        <li><a href="/docs/redirects/">Redirect Incoming Requests</a></li>
+        <li><a href="/docs/domains/">Domains and Redirects</a></li>
         <li><a href="/docs/settings-php/">Configuring settings.php</a></li>
         <li><a href="/docs/git-faq/">Git FAQs</a></li>
         <li><a href="/docs/ssh-keys/">Generating and Adding SSH Keys</a></li>
