Removing Thursdays from Office Hours description

--- a/source/_partials/footer_content.html
+++ b/source/_partials/footer_content.html
@@ -3,7 +3,7 @@
     <div class="pio-docs-footer hidden-sf" id="footer">
       <div class="office-hours">
         <h3 style="margin-top:0;">Office Hours</h3>
-        <p>Got questions? We have answers!<br>Our Agency and Community Success team holds office hours every Wednesday and Thursday.</p>
+        <p>Got questions? We have answers!<br>Our Agency and Community Success team holds office hours every Wednesday.</p>
         <br><a href="https://pantheon.io/agencies/office-hours" class="cta cta-black-on-yellow">More</a>
       </div>
       <footer role="contentinfo">
