--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -41,7 +41,7 @@
     window.addEventListener("load", setActivetrail);
   </script>
 {% endif %}
-{% if page.getstarted %}
+{% if page.quickstart %}
   <script type="text/javascript">
     function setActivetrail() {
       aaObj = document.getElementById('manual-guide-toc').getElementsByTagName('a');
@@ -49,31 +49,31 @@
         if(document.location.href.indexOf(aaObj[i].href)>=0 ){
           aaObj[i].className='active-trail';
           if(/\/user-dashboard.*/.test(aaObj[i].href)>=1) {
-            $('#docs-guides-getting-started').removeClass('active-trail');
+            $('#docs-guides-quickstart').removeClass('active-trail');
           }
           if(/\/create-new-site.*/.test(aaObj[i].href)>=1) {
-            $('#docs-guides-getting-started').removeClass('active-trail');
+            $('#docs-guides-quickstart').removeClass('active-trail');
           }
           if(/\/site-dashboard.*/.test(aaObj[i].href)>=1) {
-            $('#docs-guides-getting-started').removeClass('active-trail');
+            $('#docs-guides-quickstart').removeClass('active-trail');
           }
           if(/\/create-test-live.*/.test(aaObj[i].href)>=1) {
-            $('#docs-guides-getting-started').removeClass('active-trail');
+            $('#docs-guides-quickstart').removeClass('active-trail');
           }
           if(/\/clone-live-to-dev.*/.test(aaObj[i].href)>=1) {
-            $('#docs-guides-getting-started').removeClass('active-trail');
+            $('#docs-guides-quickstart').removeClass('active-trail');
           }
           if(/\/connection-modes.*/.test(aaObj[i].href)>=1) {
-            $('#docs-guides-getting-started').removeClass('active-trail');
+            $('#docs-guides-quickstart').removeClass('active-trail');
           }
           if(/\/onserver-dev-part1.*/.test(aaObj[i].href)>=1) {
-            $('#docs-guides-getting-started').removeClass('active-trail');
+            $('#docs-guides-quickstart').removeClass('active-trail');
           }
           if(/\/onserver-dev-part2.*/.test(aaObj[i].href)>=1) {
-            $('#docs-guides-getting-started').removeClass('active-trail');
+            $('#docs-guides-quickstart').removeClass('active-trail');
           }
           if(/\/next-steps.*/.test(aaObj[i].href)>=1) {
-            $('#docs-guides-getting-started').removeClass('active-trail');
+            $('#docs-guides-quickstart').removeClass('active-trail');
           }
         }
       }
