--- a/source/docs.html
+++ b/source/docs.html
@@ -13,9 +13,9 @@ use:
   </div>
   <div class="row" style="margin-bottom:15px;">
     <div class="col-md-12">
-        <a class="topic-info-link" style="display:block!important;" href="/docs/guides/getting-started/">
+        <a class="topic-info-link" style="display:block!important;" href="/docs/guides/quickstart/">
           <div class="guide-cta-landing" style="padding:25px!important;display:block">
-            <h1 class="hero-video__guide-cta-title">Getting Started Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
+            <h1 class="hero-video__guide-cta-title">Quickstart Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
             <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</p>
           </div>
         </a>
@@ -159,7 +159,7 @@ use:
     <div class="col-md-12">
       <ul class="top-docs top-docs-3col">
         <li><a href="/docs/terminus/">Terminus Manual</a></li>
-        <li><a href="/docs/guides/getting-started/">Getting Started Guide</a></li>
+        <li><a href="/docs/guides/quickstart/">Quickstart Guide</a></li>
         <li><a href="/docs/platform-considerations/">Platform Considerations</a></li>
         <li><a href="/docs/guides/launch/">Launch Essentials</a></li>
         <li><a href="/docs/pantheon-workflow/">Using the Pantheon Workflow</a></li>
