--- a/source/_partials/topics/get-started.html
+++ b/source/_partials/topics/get-started.html
@@ -7,7 +7,7 @@
       <a class="topic-info-link" style="display:block!important;" href="/docs/guides/quickstart/">
       <div class="col-md-6">
         <div class="guide-cta-landing" style="padding:25px!important;display:block">
-          <h1 class="hero-video__guide-cta-title">Quickstart Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
+          <h1 class="hero-video__guide-cta-title">Quick Start Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
           <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</p>
         </div>
       </div>
