--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -94,7 +94,7 @@
           if(/\/project-page.*/.test(aaObj[i].href)>=1) {
             $('#docs-guides-build-tools').removeClass('active-trail');
           }
-          if(/\/create-pr.*/.test(aaObj[i].href)>=1) {
+          if(/\/new-pr.*/.test(aaObj[i].href)>=1) {
             $('#docs-guides-build-tools').removeClass('active-trail');
           }
           if(/\/configure.*/.test(aaObj[i].href)>=1) {
@@ -109,10 +109,7 @@
           if(/\/custom-theme.*/.test(aaObj[i].href)>=1) {
             $('#docs-guides-build-tools').removeClass('active-trail');
           }
-          if(/\/custom-block.*/.test(aaObj[i].href)>=1) {
-            $('#docs-guides-build-tools').removeClass('active-trail');
-          }
-          if(/\/behat.*/.test(aaObj[i].href)>=1) {
+          if(/\/tests.*/.test(aaObj[i].href)>=1) {
             $('#docs-guides-build-tools').removeClass('active-trail');
           }
           if(/\/merge.*/.test(aaObj[i].href)>=1) {
