Add CTA to perf guide on performance topic, add terminus manual and perf to guides landing page

--- a/source/_partials/topics/performance.html
+++ b/source/_partials/topics/performance.html
@@ -7,8 +7,8 @@
         <a class="topic-info-link" style="display:block!important;" href="/docs/guides/quickstart/">
         <div class="col-md-6">
           <div class="guide-cta-landing" style="padding:25px!important;display:block">
-            <h1 class="hero-video__guide-cta-title">Quick Start Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
-            <p class="hero-video__guide-cta-subtitle">New to our platform? Check out our step-by-step guide to learn all the basics.</p>
+            <h1 class="hero-video__guide-cta-title">Front End Performance Guide <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h1>
+            <p class="hero-video__guide-cta-subtitle">Ready to dive into Pantheon's Global CDN? Check out this guide to learn how to ace an online speed test.</p>
           </div>
         </div>
       </a>
