--- a/source/_views/doc.html
+++ b/source/_views/doc.html
@@ -4,8 +4,7 @@
   {% if page.earlyaccess %}
   <div class="row" style="margin-bottom:15px;">
     <div class="col-md-12">
-      <div id="earlyaccessoutter" class="alert devbar alert-dismissible" role="alert" style="border: 1px solid #B5C0C3;border-radius: 4px;">
-       <button type="button" class="close" data-dismiss="alert" aria-label="Close" data-original-title="" title=""><span aria-hidden="true">×</span></button>
+      <div id="earlyaccessoutter" class="alert devbar" role="alert" style="border: 1px solid #B5C0C3;border-radius: 4px;">
        <h3 class="devbar">Early Access Doc</h3>
        <p class="devbar">{{page.earlynote}}</p>
      </div>
@@ -15,8 +14,7 @@
   {% if page.deprecated %}
   <div class="row" style="margin-bottom:15px;">
     <div class="col-md-12">
-      <div id="earlyaccessoutter" class="alert depbar alert-dismissible" role="alert" style="border-radius: 4px;">
-       <button type="button" class="close" data-dismiss="alert" aria-label="Close" data-original-title="" title=""><span aria-hidden="true">×</span></button>
+      <div id="earlyaccessoutter" class="alert depbar" role="alert" style="border-radius: 4px;">
        <h3 class="depbar">Deprecated Doc</h3>
        <p class="depbar">{{page.deprecatednote | raw }}</p>
      </div>
