--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -190,20 +190,17 @@
         for(i=0;i<aaObj.length;i++) {
             if(document.location.href.indexOf(aaObj[i].href)>=0 ){
                 aaObj[i].className='active-trail';
-                if(/\/monitor.*/.test(aaObj[i].href)>=1) {
-                    $('#docs-guides-introduction').removeClass('active-trail');
+                if(/\/wp-admin.*/.test(aaObj[i].href)>=1) {
+                    $('#docs-guides-wordpress-git').removeClass('active-trail');
                 }
-                if(/\/schedule.*/.test(aaObj[i].href)>=1) {
-                    $('#docs-guides-introduction').removeClass('active-trail');
+                if(/\/themes.*/.test(aaObj[i].href)>=1) {
+                    $('#docs-guides-wordpress-git').removeClass('active-trail');
                 }
-                if(/\/notify.*/.test(aaObj[i].href)>=1) {
-                    $('#docs-guides-introduction').removeClass('active-trail');
+                if(/\/wp-uploads.*/.test(aaObj[i].href)>=1) {
+                    $('#docs-guides-wordpress-git').removeClass('active-trail');
                 }
-                if(/\/slack.*/.test(aaObj[i].href)>=1) {
-                    $('#docs-guides-introduction').removeClass('active-trail');
-                }
-                if(/\/next-steps.*/.test(aaObj[i].href)>=1) {
-                    $('#docs-guides-introduction').removeClass('active-trail');
+                if(/\/plugins.*/.test(aaObj[i].href)>=1) {
+                    $('#docs-guides-wordpress-git').removeClass('active-trail');
                 }
             }
         }
