--- a/source/_partials/content/https-requirements.html
+++ b/source/_partials/content/https-requirements.html
@@ -1,4 +1,4 @@
-<h3>Requirements for Contiguously Managed HTTPS</h3>
+<h3>Requirements for Automated Certificate Renewal</h3>
 <ul>
   <li>All A/AAAA records must point to a server that serves Pantheon's acme-challenge response (e.g., <code>http://23.185.0.1/.well-known/acme-challenge/[variableDataHere]</code>).</li>
   <li>Authority Name Servers must serve mixed-case lookups.</li>
