Fix nav for lefthand toc on new page

--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -199,6 +199,9 @@
                 if(/\/media.*/.test(aaObj[i].href)>=1) {
                     $('#docs-guides-wordpress-git').removeClass('active-trail');
                 }
+                if(/\/remove-editor.*/.test(aaObj[i].href)>=1) {
+                    $('#docs-guides-wordpress-git').removeClass('active-trail');
+                }
                 if(/\/next-steps.*/.test(aaObj[i].href)>=1) {
                     $('#docs-guides-wordpress-git').removeClass('active-trail');
                 }
