Revert "Delete canonical tag"
This reverts commit d60110b0ea7a45ddd77a9b44963f543a63bd42c3.

--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -36,6 +36,7 @@
     <title>{% block title %}{{ page.title }} | {{ site.title }}{% endblock %}</title>
     <meta name="description" content="{{ page.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="{{ site.site_url}}{{ page.url }}/" />
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="{{ page.title}}">
