Add new page to Terminus manual
javascript addition for new page

First pass on config file page

--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -14,6 +14,9 @@
           if(/\/install.*/.test(aaObj[i].href)>=1) {
             $('#docs-terminus').removeClass('active-trail');
           }
+          if(/\/configuration.*/.test(aaObj[i].href)>=1) {
+            $('#docs-terminus').removeClass('active-trail');
+          }
           if(/\/examples.*/.test(aaObj[i].href)>=1) {
             $('#docs-terminus').removeClass('active-trail');
           }
