--- a/source/_partials/terminus_navbar.html
+++ b/source/_partials/terminus_navbar.html
@@ -15,6 +15,7 @@
       <li><a id="docs-terminus-directory" href="/docs/terminus/plugins/directory">Directory</a></li>
       <li><a id="docs-terminus-create" href="/docs/terminus/plugins/create">Create Plugins</a></li>
     </ul>
+    <li><a id="docs-terminus-configuration" href="/docs/terminus/configuration">Configuration File</a></li>
     <li><a id="docs-terminus-updates" href="/docs/terminus/updates">Version Updates</a></li>
   </ul>
 </div>
