--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -471,6 +471,8 @@ terminusCompareApp.filter('search', function() {
                 {% endif %}
                 {% if page.dashsearch %}
                   {% include("dash_search_box.html") %}
+                {% elseif page.newdashsearch %}
+                  {% include("new_dash_search_box.html") %}
                 {% else %}
                   {% include("search_box.html") %}
                 {% endif %}
