--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -33,13 +33,13 @@
     <meta name="google-site-verification" content="n49gHyRyl90KIyeI1VgmjAMLIEchW4TCX8NsY8gmTI8" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{% block title %}{{ page.title }} | {{ site.title }}{% endblock %}</title>
+    <title>{% block title %}{{ page.title }}{% if page.subtitle %}: {{ page.subtitle }} | {{ site.title }}{% else %} | {{ site.title }}{% endif %}{% endblock %}</title>
     <meta name="description" content="{{ page.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="{{ site.site_url}}{{ page.url }}" />
 
     <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="{{ page.title}}">
+    <meta itemprop="name" content="{{ page.title }}{% if page.subtitle %}: {{ page.subtitle }} | {{ site.title }}{% else %} | {{ site.title }}{% endif %}">
 
     {% if page.image %}
     <meta name="twitter:card" content="summary_large_image">
@@ -55,7 +55,7 @@
 
     <!-- Twitter Card data -->
     <meta name="twitter:site" content="@getpantheon">
-    <meta name="twitter:title" content="{{ page.title}}">
+    <meta name="twitter:title" content="{{ page.title }}{% if page.subtitle %}: {{ page.subtitle }}{% endif %}">
     {% if page.description %}
     <meta name="twitter:text:description" content="{{ page.description }}">
     <meta property="og:description" content="{{ page.description }}" />
@@ -77,7 +77,7 @@
 
     <!-- Twitter summary card with large image must be at least 280x150px -->
     <!-- Open Graph data -->
-    <meta property="og:title" content="{{ page.title}}" />
+    <meta property="og:title" content="{{ page.title }}{% if page.subtitle %}: {{ page.subtitle }}{% endif %}" />
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Pantheon Documentation" />
     <!--<meta property="fb:admins" content="Facebook numberic ID" />-->
