Redis link cleanup

--- a/source/docs.html
+++ b/source/docs.html
@@ -169,7 +169,7 @@ use:
         <li><a href="/docs/settings-php/">Configuring settings.php</a></li>
         <li><a href="/docs/git-faq/">Git FAQs</a></li>
         <li><a href="/docs/ssh-keys/">Generating and Adding SSH Keys</a></li>
-        <li><a href="/docs/drupal-redis/">Installing Redis on Drupal</a></li>
+        <li><a href="/docs/redis/">Installing Redis on Drupal or WordPress</a></li>
         <li><a href="/docs/drush/">Drupal Drush Command-Line Utility</a></li>
       </ul>
     </div>
