D'oh hotfix comment syntax

--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -42,7 +42,7 @@
     <meta itemprop="name" content="{{ page.title }}{% if page.subtitle %}: {{ page.subtitle }} | {{ site.title }}{% else %} | {{ site.title }}{% endif %}">
 
     {% if page.image %}
-    // Use specified image when defined in the page's frontmatter
+    <!-- Use specified image when defined in the page's frontmatter-->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:image" content="https://pantheon.io/docs/assets/images/{{ page.image }}.png" data-addsearch="no_crop"/>
     <meta itemprop="image" content="https://pantheon.io/docs/assets/images/{{ page.image }}.png">
