--- a/source/_partials/content/https-requirements.html
+++ b/source/_partials/content/https-requirements.html
@@ -1,9 +1,8 @@
 <h3>Requirements for Automated Certificate Renewal</h3>
 <ul>
-  <li>All DNS records, whether A/AAAA/CNAME, must point to Pantheon's servers so Let's Encrypt can verify domain ownership. Verification is performed via a special file hosted on the platform (e.g., <code>http://example.com/.well-known/acme-challenge/[variableDataHere]</code>)</li>
+  <li>All A/AAAA/CNAME/DNAME DNS records must point to Pantheon's servers so Let's Encrypt can verify domain ownership. MX/NS and similar records can point to other addresses.</li>
   <li>Authoritative Name Servers must serve mixed-case lookups, and must not fail CAA lookups.</li>
   <li>CAA records must either 1) not exist for the domain and its parent domains or 2) authorize Let's Encrypt.</li>
   <li>AAAA records are not required, but if set must exclusively point to Pantheon.</li>
-  <li>DNAMEs must not be used.</li>
 </ul>
 <p>Please check this doc periodically as requirements may be added or removed.</p>
