--- a/source/_partials/dash_search_box.html
+++ b/source/_partials/dash_search_box.html
@@ -1,5 +1,5 @@
 
-    <form id="searchform" action="/docs/dash-search" accept-charset="UTF-8" enctype="application/x-www-form-urlencoded">
+    <form id="searchform" action="/docs/search" accept-charset="UTF-8" enctype="application/x-www-form-urlencoded">
       <div>
         <input type="search" placeholder="Search Pantheon Documentation"value="" name="addsearch" id="piodocsearch" autocomplete="on" />
       </div>
