Update plan names
Insert CHANGEME placeholders

update support table

update site team table

Resolve CHANGEMEs

Resolve CHANGEMEs

update sandbox references

--- a/source/_partials/content/tables/custom-domains-limit.html
+++ b/source/_partials/content/tables/custom-domains-limit.html
@@ -4,7 +4,7 @@
   <thead class="thead-inverse">
     <tr>
       <th scope="row" class="thead-inverse"></th>
-      <th>Personal</th>
+      <th>Basic</th>
       <th>Professional</th>
       <th>Business</th>
       <th>Elite</th>
