--- a/source/_partials/content/transfer-owernship-billing.html
+++ b/source/_partials/content/transfer-owernship-billing.html
@@ -1,9 +1,9 @@
 <p>This is the most common way agencies handle billing. The invitation will guide the recipient through adding their payment method to the site for the designated plan.</p>
-<p>The user who pays for the site becomes the site owner. Agencies maintain access by being associated as a Supporting Organization.</p>
+<p>We recommend communicating with the business owner well in advance of sending an invitation. It's a good idea to have them notify you once they've upgraded so you can continue the going live procedure. Feel free to share the <a href="/docs/site-owner-faq/">Site Owner FAQ</a> guide with them.</p>
 
-<div class="alert alert-info">
-  <h4 class="info">Note</h4>
-  <p>We recommend communicating with the business owner well in advance of sending an invitation. It's a good idea to have them notify you once they've upgraded so you can continue the going live procedure. Feel free to share the <a href="/docs/site-owner-faq/">Site Owner FAQ</a> guide with them.</p>
+<div class="alert alert-danger">
+  <h4 class="info">Warning</h4>
+  <p>The account paying for the site is automatically assigned the <strong>Site Owner</strong> role. Agencies maintain access by being associated as a Supporting Organization.</p>
 </div>
 
 <ol>
